2006-04-19 Borut Razem <borut.razem AT siol.net>

	* src/version.awk: adapted for svn
	* /asxxxx/asxhtml/*.gif: set property svn:mime-type to image/gif
	  sim/ucsim/doc/*.gif: set property svn:mime-type to image/gif
	  sim/ucsim/doc/*.jpg: set property svn:mime-type to image/jpeg
	  /binutils-avr/etc/*.vi, *.jin: removed all properties
	  support/scripts/sdcc.ico: set property svn:mime-type to image/x-icon

2006-04-19 Borut Razem <borut.razem AT siol.net>

	* CVS to Subversion migration completed

2006-04-18 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: removed unexisting ${DEV_ROOT}\lib\pic\*.o,
	  ${DEV_ROOT}\lib\src\pic\libdev\*.S, ${DEV_ROOT}\lib\src\pic\libdev\*.inc

2006-04-17 Borut Razem <borut.razem AT siol.net>

	* device/include/Makefile.in: added pic/*.inc to the installation

2006-04-15 Bernhard Held <bernhard AT bernhardheld.de>

	* support/regression/collate-results.py: fixed output in case of
	a valdiag error
	* support/regression/generate-cases.py: fixed splitting of pathnames
	with dots
	* as/hc08/lklibr.c (addfile),
	* as/mcs51/lklibr.c (addfile): fixed off-by-one bug

2006-04-11 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (getFreePtr, pic16_popRegFromString),
	* src/pic16/ralloc.c (pic16_allocregWithName): removed debug output
	* src/pic16/pcode.c (assignValnums): fixed #1460578

2006-04-11 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libdev/*.c,
	* device/include/pic/*.h: replaced sfr and data with __sfr and __data,
	  fixes #1468739, enables compilation in --std-c99 mode
	* support/scripts/inc2h.pl: emit __sfr/__data instead of sfr/data

2006-04-11 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (find_device): removed debug output
	  (list_valid_pics): enabled verbose listing of supported devices
	* device/include/stdbool.h: define bool as char for pic14/16 as well

2006-04-07 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCC.y: allow using brackets here: "__interrupt (1) __using (1)"